--- a/web/css/austese.css
+++ b/web/css/austese.css
@@ -2,5 +2,5 @@
 body, p, text-area  {font-family: 'Gudea', Calibri, Helvetica, Arial, sans-serif; text-shadow:0 0 1px transparent;}
 .hero-unit {padding:20px}
 .page-header-spacer {padding-top:60px}
-.footer {margin-top: 45px; padding: 35px 0 36px; border-top: 1px solid #e5e5e5;}
+.footer {margin-top: 45px; padding: 30px 0px 0px 15px; border-top: 1px solid #e5e5e5;}
 .navbar .nav > li > a {line-height:39px;}
