--- a/web/css/austese.css
+++ b/web/css/austese.css
@@ -4,3 +4,7 @@ body, p, text-area  {font-family: 'Gudea', Calibri, Helvetica, Arial, sans-serif
 .page-header-spacer {padding-top:60px}
 .footer {margin-top: 45px; padding: 30px 0px 0px 15px; border-top: 1px solid #e5e5e5;}
 .navbar .nav > li > a {line-height:39px;}
+body {
+    padding-top: 80px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
+/* FF6600 */
